Fixes the flicker on the left panel when loading the page

--- a/scss/furatto/_panel.scss
+++ b/scss/furatto/_panel.scss
@@ -29,6 +29,7 @@
   height: auto;
   overflow: auto;
   @include transition(width 0.3s ease);
+  display: none;
 }
 
 .panel-left {
